# SqueMaker

./: .gitignore  CMakeLists.txt  FromLinux_BuildAll.sh  FromLinux_BuildAll_Debug.sh  FromLinux_BuildLinux_Debug.sh  FromWin_BuildAll.bat  README.md
Code/: engine_main.cpp
Code/asset_manager/: asset_manager.cpp  asset_manager.h
Code/asset_manager/importers/: import_mesh.h  importers_includeall.h
Code/asset_manager/loaders/: load_mesh.h  load_shader.h  loaders_includeall.h
Code/ecs/: ecs.cpp  ecs.h
Code/ecs/components/: camera.cpp  camera.h  components_includeall.h  drawable.cpp  drawable.h  transform.cpp  transform.h
Code/engine_ui/: engine_ui.cpp  engine_ui.h  menu_bar.h
Code/engine_ui/assets_window/: asset_window.cpp  asset_window.h
Code/engine_ui/ecs_ui/: e_inspector.cpp  e_inspector.h  ecs_hierarchy.cpp  ecs_hierarchy.h
Code/engine_ui/ecs_ui/c_inspectors/: c_drawable_ui.h  c_transform_ui.h  c_ui_includeall.h
Code/engine_ui/render_window/: render_graph.cpp  render_graph.h  render_window.cpp  render_window.h
Code/messages/: messages.cpp  messages.h
Code/render/: render.cpp  render.h
